--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,6 +9,7 @@
         Title="Rocket Controller" Height="450" Width="800">
     <Window.Resources>
         <sys:String x:Key="strSerpentTooltip">Serpent is designed to launch a rocket from Kerbin to Low Kerbin Orbit. It uses 4 next-stage calls.</sys:String>
+        <sys:String x:Key="strHorizonTooltip">Horizon is designed to land a rocket on the Mun.</sys:String>
     </Window.Resources>
 
     <DockPanel Margin="10" Name="pnlMain">
@@ -21,6 +22,7 @@
             </WrapPanel.Resources>
 
             <Button Name="SerpentWindow" Click="StartScript" ToolTip="{StaticResource strSerpentTooltip}">Start Serpent</Button>
+            <Button Name="HorizonWindow" Click="StartScript" ToolTip="{StaticResource strHorizonTooltip}">Start Horizon</Button>
         </WrapPanel>
 
         <ListBox Name="lbResult" />
